Squashed commit of the following:
commit 2a87eac4ce20fe2f3d50655c3c40f911ffcd423f
Author: stephane <fs@email.com>
Date:   Fri Jun 9 17:31:25 2023 +0200

    Squashed commit of the following:

    commit 2dfea6c38002f7acb05b2a67757287e3f40fc8c4
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 17:28:46 2023 +0200

        Readme updated

    commit 1d3f34cadfad23ceb2e2e721fecfb8374cc6cc70
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 17:27:54 2023 +0200

        Readme updated

    commit 06009070e705de6bcca421ac64430983be144106
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 17:13:18 2023 +0200

        readme updated

    commit 499d23562d7ec7399a3543cbe06c0d5b16cee11f
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 17:08:22 2023 +0200

        docs updated

    commit 986664a758cfabe882235b9364bd1d0fac20741d
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 16:53:36 2023 +0200

        colors updated

    commit 6fb7973ba14955d724a732a8f87160b7040f7971
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 16:30:19 2023 +0200

        added dart sample code

    commit cc773a499521d618af55cd994bf98ab6c3583606
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 16:29:38 2023 +0200

        added switf reserved keywords

    commit 43680fe26db63b96b3ded0ef6e17f601f24d8f74
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 16:29:07 2023 +0200

        added more colors

    commit 1e0fdafc9869204ed989858578a7a4dbec364071
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 15:36:08 2023 +0200

        fixed nulls in json

    commit 5e1bc74b44d1eef84e70a30d1c8c186ba21eacb7
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 15:27:00 2023 +0200

        colors sorted

    commit 6d6317908e97bbc3471fda03aa149ea330306a96
    Author: stephane <fs@email.com>
    Date:   Fri Jun 9 14:54:12 2023 +0200

        migrating lenguajes to ts files

    commit 51e000f1466208608541ad45e2d86ed1845fea24
    Au

--- a/package.json
+++ b/package.json
@@ -34,8 +34,15 @@
       {
         "label": "Adeso Darkokai",
         "uiTheme": "vs-dark",
-        "path": "./themes/Adeso Darkokai-color-theme.json"
+        "path": "./themes/Adeso-Darkokai-color-theme.json"
       }
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.5",
+    "typescript": "^5.1.3"
+  },
+  "scripts": {
+    "build": "tsc && node dist/index.js"
   }
 }
