--- a/code_samples/sample.yaml
+++ b/code_samples/sample.yaml
@@ -33,6 +33,7 @@ steps:
     registry: dockerhub
     tags:
       - "${{CF_REVISION}}"
+    is_active: true
 
   deploy_master:
     title: Deploying to Master
@@ -46,3 +47,25 @@ steps:
       branch:
         only:
           - master
+
+  hosts: web
+  become: true
+  vars:
+    http_port: 80
+    max_clients: 200
+  tasks:
+    - name: ensure apache is at the latest version
+      yum:
+        name: httpd
+        state: latest
+    - name: write the apache config file
+      template:
+        src: /srv/httpd.j2
+        dest: /etc/httpd.conf
+      notify:
+        - restart apache
+    - name: ensure apache is running (and enable it at boot)
+      service:
+        name: httpd
+        state: started
+        enabled: true
