--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
+    "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "build": "tsc && node dist/index.js"
+    "build": "tsc && node dist/index.js",
+    "watch": "nodemon src/index.ts"
   }
 }
