--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
   "devDependencies": {
     "@types/node": "^20.2.5",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "scripts": {
     "build": "tsc && node dist/index.js",
-    "watch": "nodemon src/index.ts"
+    "watch": "nodemon"
   }
 }
