updated banner color

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "icon": "assets/icon/Market_logo.png",
   "galleryBanner": {
-    "color": "#ae5dff",
+    "color": "#272727",
     "theme": "dark"
   },
   "categories": [
