updated linkedin url

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "author": {
     "name": "Stephane Margini",
     "email": "fsmargini@gmail.com",
-    "url": "https://www.linkedin.com/in/stephane-fabrizio-margini-bonilla-4618792b"
+    "url": "www.linkedin.com/in/stephane-margini"
   },
   "contributes": {
     "themes": [
