--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
   },
   "keywords": [
     "theme",
-    "dark theme",
-    "light theme",
-    "theme pack",
-    "monokai",
     "dark",
     "light",
-    "free theme",
-    "colorfull",
+    "pack",
+    "monokai",
+    "free",
     "adeso"
   ],
   "icon": "assets/icon/Market_logo.png",
