--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "adeso-themes-pack",
   "displayName": "Adeso Themes Pack",
-  "description": "Pack of various dark and light themes. We even have one for people with visual problems.",
+  "description": "Pack of various dark and light themes. Including some for people with visual problems.",
   "publisher": "Adeso",
   "version": "0.7.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/StephaneAdeso/adeso-themes-darkokai"
+    "url": "https://github.com/StephaneAdeso/adeso-themes-pack"
   },
   "engines": {
     "vscode": "^1.68.0"
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
