--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "free",
     "adeso"
   ],
-  "icon": "assets/icon/Market_logo.png",
+  "icon": "assets/icon/adeso_themepack_logo.png",
   "galleryBanner": {
     "color": "#272727",
     "theme": "dark"
