Some configurations cleaned

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "author": {
     "name": "Stephane Marini",
     "email": "stephaneadeso@gmail.com",
-    "url": "www.linkedin.com/in/stephane-margini"
+    "url": "http://www.linkedin.com/in/stephane-margini"
   },
   "contributes": {
     "themes": [
