--- a/package.json
+++ b/package.json
@@ -45,19 +45,9 @@
         "path": "./themes/Monodark-color-theme.json"
       },
       {
-        "label": "Adeso Universal Dark",
+        "label": "Adeso Banana in the night",
         "uiTheme": "vs-dark",
-        "path": "./themes/Universaldark-color-theme.json"
-      },
-      {
-        "label": "Adeso Banana in the dark",
-        "uiTheme": "vs-dark",
-        "path": "./themes/BananaInTheDark-color-theme.json"
-      },
-      {
-        "label": "Adeso Eye safe Dark",
-        "uiTheme": "vs-dark",
-        "path": "./themes/EyeSafedark-color-theme.json"
+        "path": "./themes/BananaInTheNight-color-theme.json"
       },
       {
         "label": "Adeso Monolight",
@@ -67,10 +57,10 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.4.7",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "build": "tsc && node dist/index.js",
